# RFC8762-CLI

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  NATIVE_HOOKS_SETUP.md  README.md  ROADMAP.md  USECASES.md
.githooks/: pre-commit
.github/: AGENT.md  AGENTS.md
.github/workflows/: ci.yml  codeql.yml
docs/: ARCHITECTURE.md  BUILD.md  LICENSE.md  RFC8762.txt  USAGE.md
docs/RFC/: RFC2104.txt  RFC4656.txt  RFC4868.txt  RFC5357.txt  RFC5905.txt  RFC8186.txt  RFC8545.txt
src/: reflector.c  sender.c  stamp.h  stamp_calc.h  stamp_firewall.c  stamp_firewall.h  stamp_globals.c  stamp_kernel_ts.h  stamp_net.h  stamp_platform.h  stamp_protocol.h  stamp_recv.h  stamp_report.h  stamp_signal.h  stamp_time.h  stamp_validation.h
tests/: .clang-tidy  test_stamp.c
